--- a/akun-pro-thailand/index.html
+++ b/akun-pro-thailand/index.html
@@ -1215,7 +1215,7 @@
 </details-modal>
 <a href="http://ftp.minikara.com/akun-pro-thailand/" class="header__heading-link link link--text focus-inset">
 <div class="header__heading-logo-wrapper">
-<img src="https://i.postimg.cc/zXzPjsKQ/qn7z89bqg-NQ5-QBQUt-S82.webp" alt="Akun Pro Slot" srcset="https://i.postimg.cc/zXzPjsKQ/qn7z89bqg-NQ5-QBQUt-S82.webp 180w, https://i.postimg.cc/zXzPjsKQ/qn7z89bqg-NQ5-QBQUt-S82.webp 270w, https://i.postimg.cc/zXzPjsKQ/qn7z89bqg-NQ5-QBQUt-S82.webp 360w" width="180" height="56.25" loading="eager" class="header__heading-logo motion-reduce" sizes="(max-width: 360px) 50vw, 180px">
+<img src="https://imagizer.imageshack.com/img922/1674/Y5QGKB.png" alt="Akun Pro Slot" srcset="https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 180w, https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 270w, https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 360w" width="180" height="56.25" loading="eager" class="header__heading-logo motion-reduce" sizes="(max-width: 360px) 50vw, 180px">
 </div>
 </a>
 <div class="header__icons header__icons--localization header-localization">
