--- a/akun-pro-thailand/index.html
+++ b/akun-pro-thailand/index.html
@@ -17,8 +17,8 @@
 <meta property="og:title" content="Akun Pro Thailand ☣️ Daftar Situs Slot Server Thailand Terbaik No 1 Gampang Menang 2024">
 <meta property="og:type" content="product">
 <meta property="og:description" content="Akun Pro Thailand hadir sebagai destinasi utama bagi para penggemar judi slot Thailand yang mencari informasi terkini tentang cara memenangkan permainan Slot Thailand dan jackpot terbaru tahun 2024. Situs ini menyediakan akses ke link pendaftaran Slot Thailand yang gacor dari berbagai penyedia terkemuka seperti Pragmatic Play, menawarkan pengalaman bermain paling memuaskan dan peluang menang yang tinggi hari ini.">
-<meta property="og:image" content="https://imagizer.imageshack.com/img923/4381/kp2ahf.png">
-<meta property="og:image:secure_url" content="https://imagizer.imageshack.com/img923/4381/kp2ahf.png">
+<meta property="og:image" content="https://imagizer.imageshack.com/img923/8256/J4V7nu.png">
+<meta property="og:image:secure_url" content="https://imagizer.imageshack.com/img923/8256/J4V7nu.png">
 <meta property="og:image:width" content="800">
 <meta property="og:image:height" content="600">
 <meta property="og:price:amount" content="10.000,00">
@@ -544,7 +544,7 @@
           "productVariants": [{
             "id": "41649742446729",
             "image": {
-              "src": "https://imagizer.imageshack.com/img923/4381/kp2ahf.png"
+              "src": "https://imagizer.imageshack.com/img923/8256/J4V7nu.png"
             },
             "price": {
               "amount": 10000.0,
@@ -569,7 +569,7 @@
           "productVariant": {
             "id": "41649742446729",
             "image": {
-              "src": "https://imagizer.imageshack.com/img923/4381/kp2ahf.png"
+              "src": "https://imagizer.imageshack.com/img923/8256/J4V7nu.png"
             },
             "price": {
               "amount": 10000.0,
@@ -1329,7 +1329,7 @@
 <div class="product-media-container media-type-image media-fit-contain global-media-settings gradient constrain-height" style="--ratio: 1.3333333333333333; --preview-ratio: 1.3333333333333333;">
 <noscript>
                             <div class="product__media media">
-                              <img src="https://imagizer.imageshack.com/img923/4381/kp2ahf.png" alt="" srcset="https://imagizer.imageshack.com/img923/4381/kp2ahf.png 246w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png 493w, 600w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png 713w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png 823w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png 990w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png 1100w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png 1206w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png 1346w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png 1426w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png 1646w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png 1946w" width="1946" height="1460" sizes="(min-width: 1200px) 495px, (min-width: 990px) calc(45.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
+                              <img src="https://imagizer.imageshack.com/img923/8256/J4V7nu.png" alt="" srcset="https://imagizer.imageshack.com/img923/8256/J4V7nu.png 246w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png 493w, 600w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png 713w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png 823w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png 990w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png 1100w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png 1206w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png 1346w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png 1426w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png 1646w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png 1946w" width="1946" height="1460" sizes="(min-width: 1200px) 495px, (min-width: 990px) calc(45.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
                             </div>
                           </noscript>
 <modal-opener class="product__modal-opener product__modal-opener--image no-js-hidden" data-modal="#ProductModal-template--15898071629961__main">
@@ -1347,7 +1347,7 @@
 </svg>
 </div>
 <div class="product__media media media--transparent">
-<img src="https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=1946" alt srcset="https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=246 246w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=493 493w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=600 600w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=713 713w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=823 823w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=990 990w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=1100 1100w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=1206 1206w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=1346 1346w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=1426 1426w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=1646 1646w, https://imagizer.imageshack.com/img923/4381/kp2ahf.png?updatedAt=1704743948377&amp;width=1946 1946w" width="1946" height="1460" class="image-magnify-lightbox" sizes="(min-width: 1200px) 495px, (min-width: 990px) calc(45.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
+<img src="https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=1946" alt srcset="https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=246 246w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=493 493w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=600 600w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=713 713w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=823 823w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=990 990w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=1100 1100w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=1206 1206w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=1346 1346w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=1426 1426w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=1646 1646w, https://imagizer.imageshack.com/img923/8256/J4V7nu.png&amp;width=1946 1946w" width="1946" height="1460" class="image-magnify-lightbox" sizes="(min-width: 1200px) 495px, (min-width: 990px) calc(45.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
 </div>
 <button class="product__media-toggle quick-add-hidden product__media-zoom-lightbox" type="button" aria-haspopup="dialog" data-media-id="24270794784905">
 <span class="visually-hidden"> Open media 1 in modal </span>
@@ -1448,7 +1448,7 @@
 </svg>
 </button>
 <div class="product-media-modal__content color-background-1 gradient" role="document" aria-label="Media gallery" tabindex="0">
-<img class="global-media-settings global-media-settings--no-shadow" srcset="https://imagizer.imageshack.com/img923/4381/kp2ahf.png&width=550 550w,https://imagizer.imageshack.com/img923/4381/kp2ahf.png 800w" sizes="(min-width: 750px) calc(100vw - 22rem), 1100px" src="https://imagizer.imageshack.com/img923/4381/kp2ahf.png&width=1445" alt="Akun Pro Thailand ☣️ Daftar Situs Slot Server Thailand Terbaik No 1 Gampang Menang 2024" loading="lazy" width="1100" height="825" data-media-id="24270794784905">
+<img class="global-media-settings global-media-settings--no-shadow" srcset="https://imagizer.imageshack.com/img923/8256/J4V7nu.png&width=550 550w,https://imagizer.imageshack.com/img923/8256/J4V7nu.png 800w" sizes="(min-width: 750px) calc(100vw - 22rem), 1100px" src="https://imagizer.imageshack.com/img923/8256/J4V7nu.png&width=1445" alt="Akun Pro Thailand ☣️ Daftar Situs Slot Server Thailand Terbaik No 1 Gampang Menang 2024" loading="lazy" width="1100" height="825" data-media-id="24270794784905">
 </div>
 </div>
 </product-modal>
@@ -1479,7 +1479,7 @@
                 "@type": "Product",
                 "name": "Akun Pro Thailand ☣️ Daftar Situs Slot Server Thailand Terbaik No 1 Gampang Menang 2024",
                 "url": "https:\/\/anti-rungkad.myshopify.com\/products\/slot-server-thailand",
-                "image": ["https://imagizer.imageshack.com/img923/4381/kp2ahf.png\u0026width=1920"],
+                "image": ["https://imagizer.imageshack.com/img923/8256/J4V7nu.png\u0026width=1920"],
                 "description": "\nAkun Pro Thailand hadir sebagai destinasi utama bagi para penggemar judi slot Thailand yang mencari informasi terkini tentang cara memenangkan permainan Slot Thailand dan jackpot terbaru tahun 2024. Situs ini menyediakan akses ke link pendaftaran Slot Thailand yang gacor dari berbagai penyedia terkemuka seperti Pragmatic Play, menawarkan pengalaman bermain paling memuaskan dan peluang menang yang tinggi hari ini.",
                 "brand": {
                   "@type": "Brand",
