--- a/akun-pro-thailand/index.html
+++ b/akun-pro-thailand/index.html
@@ -1,3 +1,5 @@
+
+
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
@@ -222,7 +224,7 @@
 
       .color-accent-1 {
         --color-background: 255, 241, 0;
-        --gradient-background: #a91a00;
+        --gradient-background: #c77603;
         --color-foreground: 43, 43, 43;
         --color-background-contrast: 128, 121, 0;
         --color-shadow: 40, 40, 40;
@@ -555,8 +557,8 @@
               "title": "Akun Pro Thailand ☣️ Daftar Situs Slot Server Thailand Terbaik No 1 Gampang Menang 2024",
               "untranslatedTitle": "Akun Pro Thailand ☣️ Daftar Situs Slot Server Thailand Terbaik No 1 Gampang Menang 2024",
               "url": "\/products\/slot-server-thailand",
-              "vendor": "Akun Pro Slot",
-              "type": "Akun Pro Slot"
+              "vendor": "SLOT BET 100 PERAK",
+              "type": "SLOT BET 100 PERAK"
             },
             "sku": "",
             "title": "Default Title",
@@ -580,8 +582,8 @@
               "title": "Akun Pro Thailand ☣️ Daftar Situs Slot Server Thailand Terbaik No 1 Gampang Menang 2024",
               "untranslatedTitle": "Akun Pro Thailand ☣️ Daftar Situs Slot Server Thailand Terbaik No 1 Gampang Menang 2024",
               "url": "\/products\/slot-server-thailand",
-              "vendor": "Akun Pro Slot",
-              "type": "Akun Pro Slot"
+              "vendor": "SLOT BET 100 PERAK",
+              "type": "SLOT BET 100 PERAK"
             },
             "sku": "",
             "title": "Default Title",
@@ -598,8 +600,8 @@
         "product": {
           "id": 7359980273801,
           "gid": "gid:\/\/shopify\/Product\/7359980273801",
-          "vendor": "Akun Pro Slot",
-          "type": "Akun Pro Slot",
+          "vendor": "SLOT BET 100 PERAK",
+          "type": "SLOT BET 100 PERAK",
           "variants": [{
             "id": 41649742446729,
             "price": 1000000,
@@ -776,9 +778,9 @@
               "name": "Akun Pro Thailand ☣️ Daftar Situs Slot Server Thailand Terbaik No 1 Gampang Menang 2024",
               "price": "10000.00",
               "sku": "",
-              "brand": "Akun Pro Slot",
+              "brand": "SLOT BET 100 PERAK",
               "variant": null,
-              "category": "Akun Pro Slot",
+              "category": "SLOT BET 100 PERAK",
               "nonInteraction": true
             });
             window.ShopifyAnalytics.lib.track("monorail:\/\/trekkie_storefront_viewed_product\/1.1", {
@@ -789,9 +791,9 @@
               "name": "Akun Pro Thailand ☣️ Daftar Situs Slot Server Thailand Terbaik No 1 Gampang Menang 2024",
               "price": "10000.00",
               "sku": "",
-              "brand": "Akun Pro Slot",
+              "brand": "SLOT BET 100 PERAK",
               "variant": null,
-              "category": "Akun Pro Slot",
+              "category": "SLOT BET 100 PERAK",
               "nonInteraction": true,
               "referer": "https:\/\/anti-rungkad.myshopify.com\/products\/slot-server-thailand?ose=false"
             });
@@ -1215,7 +1217,7 @@
 </details-modal>
 <a href="http://ftp.minikara.com/akun-pro-thailand/" class="header__heading-link link link--text focus-inset">
 <div class="header__heading-logo-wrapper">
-<img src="https://imagizer.imageshack.com/img922/1674/Y5QGKB.png" alt="Akun Pro Slot" srcset="https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 180w, https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 270w, https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 360w" width="180" height="56.25" loading="eager" class="header__heading-logo motion-reduce" sizes="(max-width: 360px) 50vw, 180px">
+<img src="https://imagizer.imageshack.com/img922/1674/Y5QGKB.png" alt="SLOT BET 100 PERAK" srcset="https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 180w, https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 270w, https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 360w" width="180" height="56.25" loading="eager" class="header__heading-logo motion-reduce" sizes="(max-width: 360px) 50vw, 180px">
 </div>
 </a>
 <div class="header__icons header__icons--localization header-localization">
@@ -1285,7 +1287,7 @@
         {
           "@context": "http://schema.org",
           "@type": "Organization",
-          "name": "Akun Pro Slot",
+          "name": "SLOT BET 100 PERAK",
           "logo": "https:\/\/anti-rungkad.myshopify.com\/cdn\/shop\/files\/LOGO_SLOT_THAILAND.png?v=1702892117\u0026width=500",
           "sameAs": ["", "", "", "", "", "", "", "", ""],
           "url": "https:\/\/anti-rungkad.myshopify.com"
@@ -1427,8 +1429,8 @@
 </div>
 <div class="product__description rte quick-add-hidden">
 <p style="text-align: center">
-<a href="https://amp-github.pages.dev/" title="Akun Pro Slot">
-<img alt="Akun Pro Slot" src="https://i.postimg.cc/c4Q4TG2B/DAFTAR.gif">
+<a href="https://amp-github.pages.dev/" title="SLOT BET 100 PERAK">
+<img alt="SLOT BET 100 PERAK" src="https://i.postimg.cc/c4Q4TG2B/DAFTAR.gif">
 </a>
 </p>
 <p style="text-align: justify;">Akun Pro Thailand hadir sebagai destinasi utama bagi para penggemar judi slot Thailand yang mencari informasi terkini tentang cara memenangkan permainan Slot Thailand dan jackpot terbaru tahun 2024. Situs ini menyediakan akses ke link pendaftaran Slot Thailand yang gacor dari berbagai penyedia terkemuka seperti Pragmatic Play, menawarkan pengalaman bermain paling memuaskan dan peluang menang yang tinggi hari ini.</p>
@@ -1483,7 +1485,7 @@
                 "description": "\nAkun Pro Thailand hadir sebagai destinasi utama bagi para penggemar judi slot Thailand yang mencari informasi terkini tentang cara memenangkan permainan Slot Thailand dan jackpot terbaru tahun 2024. Situs ini menyediakan akses ke link pendaftaran Slot Thailand yang gacor dari berbagai penyedia terkemuka seperti Pragmatic Play, menawarkan pengalaman bermain paling memuaskan dan peluang menang yang tinggi hari ini.",
                 "brand": {
                   "@type": "Brand",
-                  "name": "Akun Pro Slot"
+                  "name": "SLOT BET 100 PERAK"
                 },
                 "offers": [{
                   "@type": "Offer",
