--- a/akun-pro-vietnam/index.html
+++ b/akun-pro-vietnam/index.html
@@ -6,14 +6,14 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="theme-color" content>
 <link rel="amphtml" href="https://amp-github.pages.dev/" />
-<link rel="canonical" href="http://ftp.minikara.com/akun-pro-Vietnam/">
+<link rel="canonical" href="http://ftp.minikara.com/akun-pro-vietnam/">
 <link rel="icon" type="https://lbstatic.winwinwin168.net/media/images/FMRf9pZDSEEkanS7Ph9D.png">
 <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
 <meta name="google-site-verification" content="bqJnFKmMNzZk9ByfNP55xCkmqKTINa5Z6Jv-HIqt1b0" />
 <title>Akun Pro Vietnam ☣️ Daftar Situs Slot Server Vietnam Terbaik No 1 Gampang Menang 2024</title>
 <meta name="description" content="Akun Pro Vietnam hadir sebagai destinasi utama bagi para penggemar judi slot Vietnam yang mencari informasi terkini tentang cara memenangkan permainan Slot Vietnam dan jackpot terbaru tahun 2024. Situs ini menyediakan akses ke link pendaftaran Slot Vietnam yang gacor dari berbagai penyedia terkemuka seperti Pragmatic Play, menawarkan pengalaman bermain paling memuaskan dan peluang menang yang tinggi hari ini.">
 <meta property="og:site_name" content="Akun Pro Vietnam">
-<meta property="og:url" content="http://ftp.minikara.com/akun-pro-Vietnam/">
+<meta property="og:url" content="http://ftp.minikara.com/akun-pro-vietnam/">
 <meta property="og:title" content="Akun Pro Vietnam ☣️ Daftar Situs Slot Server Vietnam Terbaik No 1 Gampang Menang 2024">
 <meta property="og:type" content="product">
 <meta property="og:description" content="Akun Pro Vietnam hadir sebagai destinasi utama bagi para penggemar judi slot Vietnam yang mencari informasi terkini tentang cara memenangkan permainan Slot Vietnam dan jackpot terbaru tahun 2024. Situs ini menyediakan akses ke link pendaftaran Slot Vietnam yang gacor dari berbagai penyedia terkemuka seperti Pragmatic Play, menawarkan pengalaman bermain paling memuaskan dan peluang menang yang tinggi hari ini.">
@@ -34,7 +34,7 @@
       window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');
     </script>
 <meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/61516513417/digital_wallets/dialog">
-<link rel="alternate" type="application/json+oembed" href="http://ftp.minikara.com/akun-pro-Vietnam/.oembed">
+<link rel="alternate" type="application/json+oembed" href="http://ftp.minikara.com/akun-pro-vietnam/.oembed">
 <script async="async" src="/checkouts/internal/preloads.js?permanent-domain=3da92b.myshopify.com&locale=en-ID"></script>
 <script id="shopify-features" type="application/json">
       {
@@ -1213,7 +1213,7 @@
 </div>
 </details>
 </details-modal>
-<a href="http://ftp.minikara.com/akun-pro-Vietnam/" class="header__heading-link link link--text focus-inset">
+<a href="http://ftp.minikara.com/akun-pro-vietnam/" class="header__heading-link link link--text focus-inset">
 <div class="header__heading-logo-wrapper">
 <img src="https://imagizer.imageshack.com/img922/1674/Y5QGKB.png" alt="SLOT BET 100 PERAK" srcset="https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 180w, https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 270w, https://imagizer.imageshack.com/img922/1674/Y5QGKB.png 360w" width="180" height="56.25" loading="eager" class="header__heading-logo motion-reduce" sizes="(max-width: 360px) 50vw, 180px">
 </div>
